# drex

./: .gitignore  ARCHITECTURE_FINDINGS.md  CHANGELOG.md  Cargo.toml  DREX_UNIFIED_PLAN.md  DREX_UNIFIED_SPEC.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
checkpoints/poc_2b_s42/: step_0001000.json  step_0002000.json  step_0004000.json  step_0010000_final.json
checkpoints/poc_2b_s43/: step_0003000.json  step_0005000.json  step_0007000.json  step_0008000.json
checkpoints/poc_2b_s44/: step_0006000.json  step_0009000.json
docs/: index.html  phase1_validation_report.md
python/drex/: __init__.py
python/drex/eval/: __init__.py  passkey.py
python/drex/models/: __init__.py  attention.py  controller.py  drex_unified.py  hdc_encoder.py  kan_readout.py  mamba.py  memory.py  memory_esn.py  router.py  semantic.py  transformer.py
python/drex/training/: __init__.py  trainer.py
python/drex/utils/: config.py
research/: ARCHITECTURE_FINDINGS.md  MASTER_REPORT.md  README.md  RESULTS_PHASE1.md  aggregate.py  hypotheses.md  requirements.txt  run_all.py
research/experiments/: README.md  base.py
research/experiments/cat10_retroactive/: exp_10_1_retroactive_lookahead.py  exp_10_2_retroactive_decomposition.py  exp_10_3_retroactive_seq_scaling.py
research/experiments/cat11_read_bottleneck/: exp_11_1_multistep_query_former.py  exp_11_2_read_before_write.py  exp_11_3_suppression_threshold_robustness.py
research/experiments/cat12_compression_hard/: exp_12_1_retrieval_vs_reconstruction_64x.py  exp_12_2_compression_gradient_starvation.py
research/experiments/cat13_compositional_scale/: exp_13_1_twohop_with_interference.py  exp_13_2_threehop_chain.py
research/experiments/cat14_system_integration/: exp_14_1_retroactive_plus_suppression.py  exp_14_2_write_first_curriculum.py  exp_14_3_gumbel_temperature_schedule.py
research/experiments/cat15_delta_rule/: exp_15_1_delta_rule_vs_slot_write.py  exp_15_2_correction_term_ablation.py  exp_15_3_energy_gated_delta_rule.py  exp_15_4_delta_vs_larimar.py
research/experiments/cat16_parametric_memory/: exp_16_1_parametric_vs_slot_memory.py  exp_16_2_surprise_gated_memory_update.py  exp_16_3_parametric_seq_scaling.py
research/experiments/cat17_prospective_write/: exp_17_1_query_conditioned_write.py  exp_17_2_async_write_lookahead.py  exp_17_3_prospective_vs_retroactive.py  exp_17_4_prospective_vs_predictability.py
research/experiments/cat18_tiered_memory/: exp_18_1_tiered_memory.py  exp_18_2_demotion_policy_interpretability.py  exp_18_3_tiered_capacity_efficiency.py  exp_18_4_cross_tier_retrieval.py
research/experiments/cat19_sparse_hopfield/: exp_19_1_sparse_hopfield_retrieval.py  exp_19_2_hopfield_energy_write_criterion.py  exp_19_3_hopfield_capacity_pressure.py
research/experiments/cat1_what_to_write/: exp_1_1_relevance_signal_baseline.py  exp_1_2_surprise_write_signal.py  exp_1_3_gradient_magnitude_write.py  (+5 more)
research/log/: research_log.md
research/results/: exp_10_1_s123_20260308T230519.json  exp_10_1_s42_20260308T221610.json  exp_10_1_s42_20260308T230519.json  exp_10_1_s777_20260308T221621.json  exp_10_1_s777_20260308T230522.json  exp_10_2_s123_20260308T230620.json  exp_10_2_s42_20260308T230619.json  exp_10_2_s777_20260308T230625.json  exp_10_3_s123_20260308T230745.json  exp_10_3_s42_20260308T230743.json  exp_10_3_s777_20260308T230754.json  exp_11_1_s123_20260308T230806.json  exp_11_1_s42_20260308T230804.json  exp_11_1_s777_20260308T230815.json  exp_11_2_s123_20260308T230858.json  exp_11_2_s42_20260308T230855.json  exp_11_2_s777_20260308T230908.json  exp_11_3_s123_20260308T230952.json  exp_11_3_s42_20260308T230949.json  exp_11_3_s777_20260308T231006.json  exp_12_1_s123_20260308T231008.json  exp_12_1_s42_20260308T231004.json  exp_12_1_s777_20260308T231021.json  exp_12_2_s123_20260308T231010.json  exp_12_2_s42_20260308T231007.json  exp_12_2_s777_20260308T231024.json  exp_13_1_s123_20260308T231012.json  exp_13_1_s42_20260308T231008.json  exp_13_1_s777_20260308T231025.json  exp_13_2_s123_20260308T231013.json  exp_13_2_s42_20260308T231009.json  exp_13_2_s777_20260308T231026.json  exp_14_1_s123_20260308T231035.json  exp_14_1_s42_20260308T231032.json  exp_14_1_s777_20260308T231048.json  exp_14_2_s123_20260308T231042.json  exp_14_2_s42_20260308T231038.json  exp_14_2_s777_20260308T231055.json  exp_14_3_s123_20260308T231053.json  exp_14_3_s42_20260308T231049.json  (+449 more)
results/: TRAINING_RUNS.md
results/poc/: sprint1_baseline.md  sprint2_mamba.md  sprint2b_esn.md  sprint3_mamba_esn.md  sprint4_mamba_esn_hdc.md
results/wave1/: 1D_noprop_hestia_logs.csv  run_report.json
scripts/: analyze_training.py  eval_bow_baseline.py  eval_passkey.py  record_sprint_results.py  run_poc_sprint2.sh  run_poc_sprint2b.sh  train.py
scripts/poc/: run_poc_cloud.py
src/: drex_unified.py  error.rs  lib.rs
src/backbone/: mamba.py
src/bindings/: cache_py.rs  mod.rs  prefetch_py.rs  storage_py.rs
src/cache/: eviction.rs  manager.rs  mod.rs  registry.rs
src/controller/: policy.py  reward.py
src/hdc/: __init__.py  encoder.py
src/input/: __init__.py  tokenizer.py
src/memory/: __init__.py  episodic.py  reservoir.py  semantic.py
src/prefetch/: engine.rs  mod.rs  sketch.rs
src/readout/: kan.py
src/router/: __init__.py  sparse.py
src/storage/: journal.rs  mod.rs  snapshot.rs
tests/python/: conftest.py  test_attention.py  test_config.py  test_controller.py  test_dtype_contracts_ci.py  test_episodic.py  test_gradient_leak_ci.py  test_hdc_encoder.py  test_integration.py  test_kan.py  test_mamba.py  test_memory.py  test_memory_esn.py  test_reservoir.py  test_semantic.py  test_shape_contracts_ci.py  test_sparse_router.py  test_sprint_tools.py  test_sys_bridge.py  test_tokenizer.py  test_transformer.py
(+107 files in other folders)
