[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "drex"
version = "0.1.0"
description = "Novel LLM architecture with tiered memory (L1 sliding window, L2 Infini-Attention, L3 Titans disk cache)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "numpy>=1.26",
    "transformers>=4.40",
    "datasets>=2.19",
    "tokenizers>=0.19",
    "tqdm>=4.66",
    "einops>=0.7",
    "safetensors>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "black>=24.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.maturin]
# Rust extension module — built separately from the Python components.
# Python source packages live in src/ (hdc/, backbone/, controller/, etc.).
# The Rust _sys lib becomes importable as drex._sys from Python.
python-source = "src"
module-name = "drex._sys"
features = ["extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
# "src" on the path makes `from hdc.encoder import X` work without install.
pythonpath = ["src"]
# Coverage is enforced per-wave as components are implemented.
# Wave 0: no src/ code yet — coverage not required.
# When promoting a component to src/, add --cov=<pkg> and raise --cov-fail-under.
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
